# rust-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  double-pane-config.json
pub-fields-macro/: Cargo.toml
pub-fields-macro/src/: lib.rs
src/: config.rs  main.rs  renderer.rs  sequencer.rs  terminal_rederer.rs  ui.rs
