[package]
name = "rust-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
pub-fields-macro = { path = "pub-fields-macro" }
libc = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = { version = "*", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
pyo3 = "0.28.2"
